--- a/language/uk_UA.po
+++ b/language/uk_UA.po
@@ -1,11 +1,11 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: Agere Data Grid\n"
+"Project-Id-Version: Popov Data Grid\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-11-09 18:47+0200\n"
 "PO-Revision-Date: 2016-11-09 18:47+0200\n"
 "Last-Translator: \n"
-"Language-Team: Agere Company <dev@agere.com.ua>\n"
+"Language-Team: Popov Company <dev@agere.com.ua>\n"
 "Language: uk\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
